# panel-1

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: config.py  database.py  main.py
backend/ai/: client.py  prompts.py  tools.py
backend/api/: chat.py  documents.py  reports.py
backend/migrations/: env.py
backend/models/: __init__.py  base.py  chat.py  deputy_report.py  document.py  document_category.py  equipment.py  equipment_log.py  gas_reading.py  hazard_report.py  incident_report.py  location.py  personnel.py  prestart.py  report.py  shift_report.py  strata.py  tarp.py  ventilation.py
backend/schemas/: __init__.py  chat.py  report.py
backend/seed/: seed_data.py
backend/services/: chart_service.py  chat_service.py  document_manager.py  ocr_service.py  query_builder.py
data/: panel1.db-shm  panel1.db-wal
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatHistory.tsx  ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx
frontend/src/hooks/: useChat.ts  useReports.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  ReportsPage.tsx  UploadPage.tsx
scripts/: dev.py  seed_db.py
